apps/argocd/envs/local/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: nerdd-gateway
      namespace: nginx-gateway
  hostnames:
    - localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /argocd
      backendRefs:
        - kind: Service
          name: argocd-server
          port: 80
          group: ""
          weight: 1
